[gd_scene load_steps=5 format=3 uid="uid://bkueuohdyhj7q"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_feb5d"]

[sub_resource type="Curve" id="Curve_trail"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.3), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_trail"]
offsets = PackedFloat32Array(0, 1)
colors = PackedColorArray(0.6, 0.7, 1, 1, 0.6, 0.7, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y32ns"]
size = Vector2(40, 40)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_feb5d")

[node name="TrailParticles" type="CPUParticles2D" parent="."]
position = Vector2(10, 20)
emitting = false
amount = 80
lifetime = 0.4
preprocess = 0.4
local_coords = false
draw_order = 1
randomness = 0.5
lifetime_randomness = 0.2
direction = Vector2(-1, 0)
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 6.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_trail")
color_ramp = SubResource("Gradient_trail")

[node name="ShipVisual" type="Polygon2D" parent="."]
color = Color(0.6, 0.6, 1, 1)
polygon = PackedVector2Array(40, 20, 0, 5, 12, 20, 0, 35)

[node name="ShipOutline" type="Line2D" parent="."]
points = PackedVector2Array(40, 20, 0, 5, 12, 20, 0, 35, 40, 20)
width = 2.0
default_color = Color(0.2, 0.2, 0.5, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_y32ns")
